[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayerCameras.gd" type="Script" id=1]
[ext_resource path="res://ChaseCamera.tscn" type="PackedScene" id=3]

[node name="PlayerCameras" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 500
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOneViewport" type="ViewportContainer" parent="HSplitContainer"]
margin_right = 500.0
margin_bottom = 600.0
stretch = true

[node name="Viewport" type="Viewport" parent="HSplitContainer/PlayerOneViewport"]
size = Vector2( 500, 600 )
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="ChaseCamera" parent="HSplitContainer/PlayerOneViewport/Viewport" instance=ExtResource( 3 )]

[node name="PlayerTwoViewport" type="ViewportContainer" parent="HSplitContainer"]
margin_left = 500.0
margin_right = 1024.0
margin_bottom = 600.0
stretch = true

[node name="Viewport2" type="Viewport" parent="HSplitContainer/PlayerTwoViewport"]
size = Vector2( 524, 600 )
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="ChaseCamera2" parent="HSplitContainer/PlayerTwoViewport/Viewport2" instance=ExtResource( 3 )]
